// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages component renders UI as expected 1`] = `
<div
  className="messages"
>
  Messages
   
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Messages component renders UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
   
</div>
`;

exports[`renders UI as expected 1`] = `
<div
  className="messages"
>
  Messages
   
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`renders UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
   
</div>
`;
